Adapt Mixins and mappings to 1.20.1 (`1.0.0-d:c1+1.20.1:c2`)